<resources>
    <string name="app_name">DoseAlertaApp</string>
    <string name="titulo_agendar_medicamento">Agendar Medicamento</string>
    <string name="nome_medicamento">Nome do Medicamento</string>
    <string name="selecione_data">Selecione a Data</string>
    <string name="horario_inicial">Horário Inicial</string>
    <string name="intervalo_doses">Intervalo entre Doses</string>
    <string name="numero_dias">Número de Dias</string>
    <string name="default_numero_dias">1</string>
    <string name="botao_agendar">Agendar</string>
    <string name="descricao_editar">Editar</string>
    <string name="descricao_excluir">Excluir</string>
    <string name="horario_exemplo">08:00</string>
    <string name="nome_medicamento_exemplo">Paracetamol</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_main">Tela Principal</string>
    <string name="open">Abrir menu</string>
    <string name="close">Fechar menu</string>



</resources>

